# desktop_setup

./: .gitignore  README.md  mix.exs
lib/: util.ex
lib/mix/tasks/: install.ex  migrate_convert.ex  setup_android.ex  setup_ios.ex
priv/android_sample/: .tool-versions  settings.gradle
priv/android_sample/app/: .gitignore  build.gradle  run_mix
priv/android_sample/app/src/main/: AndroidManifest.xml
priv/android_sample/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
priv/android_sample/gradle/: libs.versions.toml
priv/android_sample/gradle/wrapper/: gradle-wrapper.properties
priv/erlang/erts-14.2.5/include/: erl_int_sizes_config.h
priv/erlang/erts-14.2.5/include/internal/: ethread_header_config.h
priv/erlang/lib/asn1-5.2.2/ebin/: asn1.app  asn1.appup  asn1_db.beam  asn1ct.beam  asn1ct_check.beam  asn1ct_constructed_ber_bin_v2.beam  asn1ct_constructed_per.beam  asn1ct_eval_ext.beam  asn1ct_func.beam  asn1ct_gen.beam  asn1ct_gen_ber_bin_v2.beam  asn1ct_gen_check.beam  asn1ct_gen_jer.beam  asn1ct_gen_per.beam  asn1ct_imm.beam  asn1ct_name.beam  asn1ct_parser2.beam  asn1ct_pretty_format.beam  asn1ct_rtt.beam  asn1ct_table.beam  asn1ct_tok.beam  asn1ct_value.beam  asn1rt_nif.beam
priv/erlang/lib/asn1-5.2.2/src/: asn1ct_eval_ext.erl  asn1ct_rtt.erl
priv/erlang/lib/crypto-5.4.2/ebin/: crypto.app  crypto.appup  crypto.beam  crypto_ec_curves.beam
priv/erlang/lib/erl_interface-5.5.1/ebin/: erl_interface.app  erl_interface.appup
priv/erlang/lib/erl_interface-5.5.1/src/: eidefs.mk
priv/erlang/lib/erts-14.2.5/ebin/: erts.app
priv/xcodegen/: .gitignore  .tool-versions  base_spec.yml  postscript.sh  project.yml  project_watchos.yml  run_mix
priv/xcodegen/TemplateApp/: Bridge.swift  ContentView.swift  TemplateApp.swift  WebView.swift
priv/xcodegen/liberlang.xcframework/: Info.plist
test/: desktop_native_test.exs
(+419 files in other folders)
